--- a/style.css
+++ b/style.css
@@ -1,412 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600&display=swap");
-
-:root {
-    --primary-clr: rgba(228, 228, 229, 1);
-}
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Nunito", sans-serif;
-}
-
-body {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    width: 100%;
-    background: url(https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/8727c9b1-be21-4932-a221-4257b59a74dd);
-    background-repeat: no-repeat;
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    animation: slidein 120s forwards infinite alternate;
-}
-
-@keyframes slidein {
-    0%,
-    100% {
-        background-position: 20% 0%;
-        background-size: 3400px;
-    }
-    50% {
-        background-position: 100% 0%;
-        background-size: 2400px;
-    }
-}
-
-.album-cover {
-    width: 90%;
-}
-
-.swiper {
-    width: 100%;
-    padding: 40px 0 100px;
-}
-
-.swiper-slide {
-    position: relative;
-    max-width: 200px;
-    aspect-ratio: 1/1;
-    border-radius: 10px;
-}
-
-.swiper-slide img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-    border-radius: inherit;
-    -webkit-box-reflect: below -5px linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.4));
-    pointer-events: none;
-    user-select: none;
-}
-
-.swiper-slide-active .overlay {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(28, 22, 37, 0.6);
-    border-radius: inherit;
-    opacity: 0;
-    transition: all 0.4s linear;
-}
-
-.swiper-slide:hover .overlay {
-    opacity: 1;
-}
-
-.swiper-slide .overlay ion-icon {
-    opacity: 0;
-}
-
-.swiper-slide-active:hover .overlay ion-icon {
-    font-size: 4rem;
-    color: white;
-    opacity: 1;
-    cursor: pointer;
-}
-
-/* Music Player */
-
-.music-player {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: var(--primary-clr);
-    width: 380px;
-    padding: 10px 30px;
-    border-radius: 20px;
-}
-
-.music-player h1 {
-    font-size: 1.5rem;
-    font-weight: 600;
-    line-height: 1.6;
-}
-
-.music-player p {
-    font-size: 1rem;
-    font-weight: 400;
-    opacity: 0.6;
-}
-
-/* Music Player Progress */
-
-#progress {
-    appearance: none;
-    -webkit-appearance: none;
-    width: 100%;
-    height: 7px;
-    background: rgba(163, 162, 164, 0.4);
-    border-radius: 4px;
-    margin: 32px 0 24px;
-    cursor: pointer;
-}
-
-#progress::-webkit-slider-thumb {
-    appearance: none;
-    -webkit-appearance: none;
-    background: rgba(163, 162, 164, 0.9);
-    width: 16px;
-    aspect-ratio: 1/1;
-    border-radius: 50%;
-    outline: 4px solid var(--primary-clr);
-    box-shadow: 0 6px 10px rgba(5, 36, 28, 0.3);
-}
-
-/* Music Player Controls */
-
-.controls {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.controls button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50px;
-    aspect-ratio: 1/1;
-    margin: 20px;
-    background: rgba(163, 162, 164, 0.3);
-    color: var(--primary-clr);
-    border-radius: 50%;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    outline: 0;
-    font-size: 1.1rem;
-    box-shadow: 0 10px 20px rgba(5, 36, 28, 0.3);
-    cursor: pointer;
-    transition: all 0.3s linear;
-}
-
-.controls button:is(:hover, :focus-visible) {
-    transform: scale(0.96);
-}
-
-.controls button:nth-child(2) {
-    transform: scale(1.3);
-}
-
-.controls button:nth-child(2):is(:hover, :focus-visible) {
-    transform: scale(1.25);
-}
-
-/* Style untuk pop-up */
-.popup {
-    display: none; /* Awalnya disembunyikan */
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.6);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-}
-
-.popup-content {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    width: 100%;
-    background: url(https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/8727c9b1-be21-4932-a221-4257b59a74dd);
-    background-repeat: no-repeat;
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    animation: slidein 120s forwards infinite alternate;
-}
-    animation: fadeIn 0.5s ease;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-        transform: scale(0.9);
-    }
-    to {
-        opacity: 1;
-        transform: scale(1);
-    }
-}
-
-
-.profile-card-ctr {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 40px;
-}
-
-@media screen and (max-width: 576px) {
-    .profile-card-ctr {
-        flex-wrap: wrap;
-    }
-}
-.profile-card__button {
-    background: none;
-    border: none;
-    font-family: "Quicksand", sans-serif;
-    font-weight: 700;
-    font-size: 19px;
-    margin: 15px 35px;
-    padding: 15px 40px;
-    min-width: 201px;
-    border-radius: 50px;
-    min-height: 55px;
-    color: #fff;
-    cursor: pointer;
-    backface-visibility: hidden;
-    transition: all 0.3s;
-}
-@media screen and (max-width: 768px) {
-    .profile-card__button {
-        min-width: 170px;
-        margin: 15px 25px;
-    }
-}
-@media screen and (max-width: 576px) {
-    .profile-card__button {
-        min-width: inherit;
-        margin: 0;
-        margin-bottom: 16px;
-        width: 100%;
-        max-width: 300px;
-    }
-    .profile-card__button:last-child {
-        margin-bottom: 0;
-    }
-}
-.profile-card__button:focus {
-    outline: none !important;
-}
-@media screen and (min-width: 768px) {
-    .profile-card__button:hover {
-        transform: translateY(-5px);
-    }
-}
-.profile-card__button:first-child {
-    margin-left: 0;
-}
-.profile-card__button:last-child {
-    margin-right: 0;
-}
-.profile-card__button.button--blue {
-    background: linear-gradient(45deg, grey, black);
-    box-shadow: 0px 4px 30px rgba(12, 127, 212, 0.9);
-}
-.profile-card__button.button--blue:hover {
-    box-shadow: 0px 7px 30px rgba(19, 127, 212, 0.75);
-}
-.profile-card__button.button--orange {
-    background: linear-gradient(45deg, grey, black);
-    box-shadow: 0px 4px 30px rgba(12, 127, 212, 0.9);
-}
-.profile-card__button.button--orange:hover {
-    box-shadow: 0px 7px 30px rgba(19, 127, 212, 0.75);
-}
-.profile-card__button.button--gray {
-    box-shadow: none;
-    background: #dcdcdc;
-    color: #142029;
-}
-
-
-.profile-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 15px;
-}
-
-.profile-img {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin-bottom: 10px;
-}
-
-.profile-header h2 {
-    margin: 0;
-    font-size: 22px;
-    color: white;
-}
-.icon {
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    stroke-width: 0;
-    stroke: currentColor;
-    fill: currentColor;
-}
-
-.icon-font {
-    display: inline-flex;
-}
-.profile-card-social {
-    margin-top: 25px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-}
-.profile-card-social__item {
-    display: inline-flex;
-    width: 55px;
-    height: 55px;
-    margin: 15px;
-    border-radius: 50%;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    background: #405de6;
-    box-shadow: 0px 7px 30px rgba(43, 98, 169, 0.5);
-    position: relative;
-    font-size: 21px;
-    flex-shrink: 0;
-    transition: all 0.3s;
-}
-@media screen and (max-width: 768px) {
-    .profile-card-social__item {
-        width: 50px;
-        height: 50px;
-        margin: 10px;
-    }
-}
-@media screen and (min-width: 768px) {
-    .profile-card-social__item:hover {
-        transform: scale(1.2);
-    }
-}
-.profile-card-social__item.facebook {
-    background: linear-gradient(45deg, #3b5998, #0078d7);
-    box-shadow: 0px 4px 30px rgba(43, 98, 169, 0.5);
-}
-.profile-card-social__item.twitter {
-    background: linear-gradient(45deg, #1da1f2, #0e71c8);
-    box-shadow: 0px 4px 30px rgba(19, 127, 212, 0.7);
-}
-.profile-card-social__item.instagram {
-    background: linear-gradient(
-        45deg,
-        #405de6,
-        #5851db,
-        #833ab4,
-        #c13584,
-        #e1306c,
-        #fd1d1d
-    );
-    box-shadow: 0px 4px 30px rgba(120, 64, 190, 0.6);
-}
-.profile-card-social__item.behance {
-    background: linear-gradient(45deg, green, #00ff00);
-    box-shadow: 0px 4px 30px rgba(24, 214, 10, 0.7);
-}
-.profile-card-social__item.github {
-    background: linear-gradient(45deg, #333333, #626b73);
-    box-shadow: 0px 4px 30px rgba(63, 65, 67, 0.6);
-}
-.profile-card-social__item.codepen {
-    background: linear-gradient(45deg, #0088cc, #0088c7);
-    box-shadow: 0px 4px 30px rgba(0, 136, 204, 0.6);
-}
-.profile-card-social__item.link {
-    background: linear-gradient(45deg, #d5135a, #f05924);
-    box-shadow: 0px 4px 30px rgba(223, 45, 70, 0.6);
-}
-.profile-card-social .icon-font {
-    display: inline-flex;
-}
+@import url(https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600&display=swap);.controls button,.music-player{display:flex;color:var(--primary-clr)}.swiper-slide:hover .overlay,to{opacity:1}.profile-card__button.button--blue:hover,.profile-card__button.button--orange:hover{box-shadow:0 7px 30px rgba(19,127,212,.75)}:root{--primary-clr:rgba(228, 228, 229, 1)}*{margin:0;padding:0;box-sizing:border-box;font-family:Nunito,sans-serif}.popup-content,body{position:relative;display:flex;flex-direction:column;align-items:center;justify-content:center;min-height:100vh;width:100%;background:url(https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/8727c9b1-be21-4932-a221-4257b59a74dd) no-repeat;backdrop-filter:blur(8px);-webkit-backdrop-filter:blur(8px);animation:120s infinite alternate forwards slidein}@keyframes slidein{0%,100%{background-position:20% 0;background-size:3400px}50%{background-position:100% 0;background-size:2400px}}.album-cover{width:90%}.swiper{width:100%;padding:40px 0 100px}.swiper-slide{position:relative;max-width:200px;aspect-ratio:1/1;border-radius:10px}.swiper-slide img{object-fit:cover;width:100%;height:100%;border-radius:inherit;-webkit-box-reflect:below -5px linear-gradient(transparent,transparent,rgba(0,0,0,0.4));pointer-events:none;user-select:none}.swiper-slide-active .overlay{display:flex;align-items:center;justify-content:center;position:absolute;inset:0;width:100%;height:100%;background-color:rgba(28,22,37,.6);border-radius:inherit;opacity:0;transition:.4s linear}.profile-card__button.button--blue,.profile-card__button.button--orange{background:linear-gradient(45deg,grey,#000);box-shadow:0 4px 30px rgba(12,127,212,.9)}.swiper-slide .overlay ion-icon{opacity:0}.swiper-slide-active:hover .overlay ion-icon{font-size:4rem;color:#fff;opacity:1;cursor:pointer}.music-player{flex-direction:column;justify-content:center;align-items:center;width:380px;padding:10px 30px;border-radius:20px}.music-player h1{font-size:1.5rem;font-weight:600;line-height:1.6}.music-player p{font-size:1rem;font-weight:400;opacity:.6}#progress{appearance:none;-webkit-appearance:none;width:100%;height:7px;background:rgba(163,162,164,.4);border-radius:4px;margin:32px 0 24px;cursor:pointer}#progress::-webkit-slider-thumb{appearance:none;-webkit-appearance:none;background:rgba(163,162,164,.9);width:16px;aspect-ratio:1/1;border-radius:50%;outline:4px solid var(--primary-clr);box-shadow:0 6px 10px rgba(5,36,28,.3)}.controls{display:flex;justify-content:center;align-items:center}.controls button{align-items:center;justify-content:center;width:50px;aspect-ratio:1/1;margin:20px;background:rgba(163,162,164,.3);border-radius:50%;border:1px solid rgba(255,255,255,.3);outline:0;font-size:1.1rem;box-shadow:0 10px 20px rgba(5,36,28,.3);cursor:pointer;transition:.3s linear}.controls button:is(:hover,:focus-visible){transform:scale(.96)}.controls button:nth-child(2){transform:scale(1.3)}.controls button:nth-child(2):is(:hover,:focus-visible){transform:scale(1.25)}.popup{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background-color:rgba(0,0,0,.6);display:flex;justify-content:center;align-items:center;z-index:1000}to{transform:scale(1)}.profile-card__button{background:0 0;border:none;font-family:Quicksand,sans-serif;font-weight:700;font-size:19px;margin:15px 35px;padding:15px 40px;min-width:201px;border-radius:50px;min-height:55px;color:#fff;cursor:pointer;backface-visibility:hidden;transition:.3s}@media screen and (max-width:768px){.profile-card__button{min-width:170px;margin:15px 25px}}@media screen and (max-width:576px){.profile-card-ctr{flex-wrap:wrap}.profile-card__button{min-width:inherit;margin:0 0 16px;width:100%;max-width:300px}.profile-card__button:last-child{margin-bottom:0}}.profile-card__button:focus{outline:0!important}.profile-card__button:first-child{margin-left:0}.profile-card__button:last-child{margin-right:0}.profile-card__button.button--gray{box-shadow:none;background:#dcdcdc;color:#142029}.profile-header{display:flex;flex-direction:column;align-items:center;margin-bottom:15px}.profile-img{width:80px;height:80px;border-radius:50%;margin-bottom:10px}.profile-header h2{margin:0;font-size:22px;color:#fff}.icon{display:inline-block;width:1em;height:1em;stroke-width:0;stroke:currentColor;fill:currentColor}.icon-font,.profile-card-social .icon-font{display:inline-flex}.profile-card-social{margin-top:25px;display:flex;justify-content:center;align-items:center;flex-wrap:wrap}.profile-card-social__item{display:inline-flex;width:55px;height:55px;margin:15px;border-radius:50%;align-items:center;justify-content:center;color:#fff;background:#405de6;box-shadow:0 7px 30px rgba(43,98,169,.5);position:relative;font-size:21px;flex-shrink:0;transition:.3s}@media screen and (max-width:768px){.profile-card-social__item{width:50px;height:50px;margin:10px}}@media screen and (min-width:768px){.profile-card__button:hover{transform:translateY(-5px)}.profile-card-social__item:hover{transform:scale(1.2)}}.profile-card-social__item.facebook{background:linear-gradient(45deg,#3b5998,#0078d7);box-shadow:0 4px 30px rgba(43,98,169,.5)}.profile-card-social__item.twitter{background:linear-gradient(45deg,#1da1f2,#0e71c8);box-shadow:0 4px 30px rgba(19,127,212,.7)}.profile-card-social__item.instagram{background:linear-gradient(45deg,#405de6,#5851db,#833ab4,#c13584,#e1306c,#fd1d1d);box-shadow:0 4px 30px rgba(120,64,190,.6)}.profile-card-social__item.behance{background:linear-gradient(45deg,green,#0f0);box-shadow:0 4px 30px rgba(24,214,10,.7)}.profile-card-social__item.github{background:linear-gradient(45deg,#333,#626b73);box-shadow:0 4px 30px rgba(63,65,67,.6)}.profile-card-social__item.codepen{background:linear-gradient(45deg,#08c,#0088c7);box-shadow:0 4px 30px rgba(0,136,204,.6)}.profile-card-social__item.link{background:linear-gradient(45deg,#d5135a,#f05924);box-shadow:0 4px 30px rgba(223,45,70,.6)}
